remove crap, set proper stylesheet

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -9,8 +9,8 @@ Template: bb-theme
 @import "mi_mixins";
 
 $color_grau_dunkel:#666666;
-$color_gruen_logo:#9AC447;
-$color_mi_gruen_text:#8ab82e;
+$color_gruen_logo:#87a133;
+$color_dunkelblau:#0e2c40;
 $color_text_white: #fbfbfb;
 
 
