--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 /*
-Theme Name: Mai-Internet
+Theme Name: MaiNetCare
 Description: Special built theme for beaver-builder
 Version: 1.0
 Author: mmai
-Author URI: http://www.mai-internet.de
+Author URI: https://www.mainetcare.de
 Template: bb-theme
 */
 /**
