--- a/style.css
+++ b/style.css
@@ -2,8 +2,8 @@
 Theme Name: MaiNetCare
 Description: Special built theme for beaver-builder
 Version: 1.0
-Author: mmai
-Author URI: https://www.mainetcare.de
+Author: MaiNetCare GmbH
+Author URI: https://mainetcare.de
 Template: bb-theme
 */
 /**
