--- a/style.css
+++ b/style.css
@@ -21,7 +21,9 @@ Template: bb-theme
 
 // Extra large devices (large desktops, 1200px and up)
 @media (min-width: 1200px) { ... } */
-.mi-logo img { background-color: #FFF; }
-
 .mi-slogan { font-size: 13px; line-height: 1.5em; font-family: sans-serif; }
 @media (max-width: 767px) { .mi-slogan { text-align: center; } }
+
+.fl-page-bar { position: absolute; top: 0; z-index: 11; width: 100%; }
+
+.fl-page-header, .fl-page-header-wrap { background-color: transparent; border-bottom-style: none; /* Removes the 1px border below the menu */ position: absolute; top: 80px; /* Height of top bar */ width: 100%; z-index: 10; }
