add accessibility add copyright and other util-shortcodes

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -7,6 +7,7 @@ Author URI: https://mainetcare.de
 Template: bb-theme
 */
 @import "mi_mixins";
+@import "accessibility";
 
 $color_grau_dunkel: #666666;
 $color_gruen_logo: #87a133;
