--- a/style.css
+++ b/style.css
@@ -21,6 +21,10 @@ Template: bb-theme
 
 // Extra large devices (large desktops, 1200px and up)
 @media (min-width: 1200px) { ... } */
+a.skip-main { left: -999px; position: absolute; top: auto; width: 1px; height: 1px; overflow: hidden; z-index: -999; }
+
+a.skip-main:focus, a.skip-main:active { color: #000; background-color: #FFF; left: auto; top: auto; width: 30%; height: auto; overflow: auto; margin: 10px 35%; padding: 5px; border-radius: 15px; border: 3px solid #c13523; text-align: center; font-size: 1.2em; z-index: 999; }
+
 a:hover, .fl-builder a:hover { text-decoration: underline; }
 
 .mi-slogan { font-size: 13px; line-height: 1.5em; font-family: sans-serif; }
