--- a/style.css
+++ b/style.css
@@ -29,6 +29,71 @@ a.skip-main { left: -999px; position: absolute; top: auto; width: 1px; height: 1
 
 a.skip-main:focus, a.skip-main:active { color: #000; background-color: #FFF; left: auto; top: auto; width: 30%; height: auto; overflow: auto; margin: 10px 35%; padding: 5px; border-radius: 15px; border: 3px solid #c13523; text-align: center; font-size: 1.2em; z-index: 999; }
 
+/* Variables
+================================== */
+/* Tables
+================================== */
+.Rtable { display: flex; flex-wrap: wrap; margin: 0 0 3em 0; padding: 0; }
+
+.Rtable-cell { box-sizing: border-box; flex-grow: 1; width: 100%; padding: 0.8em 1.2em; overflow: hidden; list-style: none; border: solid 1px white; background: #fbfbfb; }
+.Rtable-cell > h1, .Rtable-cell > h2, .Rtable-cell > h3, .Rtable-cell > h4, .Rtable-cell > h5, .Rtable-cell > h6 { margin: 0; }
+
+/* Table column sizing
+================================== */
+.Rtable--2cols > .Rtable-cell { width: 50%; }
+
+.Rtable--3cols > .Rtable-cell { width: 33.33%; }
+
+.Rtable--4cols > .Rtable-cell { width: 25%; }
+
+.Rtable--5cols > .Rtable-cell { width: 20%; }
+
+.Rtable--6cols > .Rtable-cell { width: 16.6%; }
+
+/* Responsive
+==================================== */
+@media all and (max-width: 500px) { .Rtable--collapse { display: block; }
+  .Rtable--collapse > .Rtable-cell { width: 100% !important; }
+  .Rtable--collapse > .Rtable-cell--foot { margin-bottom: 1em; } }
+.no-flexbox .Rtable { display: block; }
+.no-flexbox .Rtable > .Rtable-cell { width: 100%; }
+.no-flexbox .Rtable > .Rtable-cell--foot { margin-bottom: 1em; }
+
+/* Apply styles
+================================== */
+.Rtable { position: relative; top: 1px; left: 1px; }
+
+/* Cell styles
+================================== */
+.Rtable-cell--medium { background-color: #b8c0c8; border-color: #a9b3bc; }
+
+.Rtable-cell--light, .Rtable-cell { background-color: white; border-color: #e2e6e9; }
+
+.Rtable-cell--highlight { background-color: lightgreen; border-color: #64e764; }
+
+.Rtable-cell--alert { background-color: darkorange; border-color: #cc7000; color: white; }
+.Rtable-cell--alert > h1, .Rtable-cell--alert > h2, .Rtable-cell--alert > h3, .Rtable-cell--alert > h4, .Rtable-cell--alert > h5, .Rtable-cell--alert > h6 { color: white; }
+
+.Rtable-cell { margin: -1px 0 -1px; }
+
+.Rtable-cell--head { background-color: #0e2c40; border-color: #5a6773; color: white; }
+.Rtable-cell--head > h1, .Rtable-cell--head > h2, .Rtable-cell--head > h3, .Rtable-cell--head > h4, .Rtable-cell--head > h5, .Rtable-cell--head > h6 { color: white; }
+
+@media all and (max-width: 500px) { .hiddenSmall { display: none; } }
+/* Tab Styling
+==================================== */
+.Tablist { display: flex; flex-direction: row; }
+@media all and (min-width: 500px) { .Tablist { display: none; } }
+
+.Tab { padding: 5px; margin: 0 1px 1px 0; text-align: center; background-color: #87a133; border: solid 1px #87a133; border-bottom-width: 0; border-radius: 0.5em 0.5em 0 0; font-weight: bold; color: #fbfbfb; transition: background-color 0.1s; cursor: pointer; }
+.Tab:hover, .Tab:focus { background-color: #93aa47; border-color: #93aa47; outline: none; }
+.Tab[aria-selected="false"]:active { margin-top: 0.2em; padding-bottom: 0.4em; }
+.Tab[aria-selected="true"] { color: #666666; background: #f3f6eb; cursor: default; }
+
+/* Accordion Styling
+==================================== */
+.js-RtableTabs, .js-RtableAccordions { min-width: 240px; }
+
 a:hover, .fl-builder a:hover { text-decoration: underline; }
 
 .mi-slogan { font-size: 13px; line-height: 1.5em; font-family: sans-serif; }
