--- a/sass/style.scss
+++ b/sass/style.scss
@@ -154,3 +154,9 @@ a:hover, .fl-builder a:hover {
 .mi-nobreak {
   white-space: nowrap;
 }
+
+.mi-price-headline {
+  background-color:#152c3e;
+  color:white;
+  text-align: center;
+}
