--- a/sass/style.scss
+++ b/sass/style.scss
@@ -156,7 +156,24 @@ a:hover, .fl-builder a:hover {
 }
 
 .mi-price-headline {
-  background-color:#152c3e;
-  color:white;
+  background-color:$color_dunkelblau;
+  color:$color_text_white;
   text-align: center;
+}
+
+.mi-price {
+  text-align:center;
+  strong {
+    font-size:2.5em;
+    font-weight:300;
+  }
+  p {
+    margin-top:20px;
+  }
+}
+.mi-cta {
+  text-align: center;
+  button {
+    font-weight: 400;
+  }
 }
