--- a/style.css
+++ b/style.css
@@ -84,12 +84,6 @@ a.skip-main:focus, a.skip-main:active { color: #000; background-color: #FFF; lef
 .mi-pricetable-cell--head { justify-content: center; background-color: #0e2c40; border-color: #5a6773; color: white; }
 .mi-pricetable-cell--head > h1, .mi-pricetable-cell--head > h2, .mi-pricetable-cell--head > h3, .mi-pricetable-cell--head > h4, .mi-pricetable-cell--head > h5, .mi-pricetable-cell--head > h6 { color: white; }
 
-.mi-price, .mi-cta { text-align: center; }
-.mi-price strong, .mi-cta strong { font-size: 2.5em; font-weight: 300; }
-.mi-price p, .mi-cta p { margin-top: 20px; }
-
-.mi-cta button { font-weight: 400; }
-
 @media all and (max-width: 500px) { .hiddenSmall { display: none; } }
 /* Tab Styling
 ==================================== */
@@ -163,4 +157,11 @@ a:hover, .fl-builder a:hover { text-decoration: underline; }
 
 .mi-nobreak { white-space: nowrap; }
 
-.mi-price-headline { background-color: #152c3e; color: white; text-align: center; }
+.mi-price-headline { background-color: #0e2c40; color: #fbfbfb; text-align: center; }
+
+.mi-price { text-align: center; }
+.mi-price strong { font-size: 2.5em; font-weight: 300; }
+.mi-price p { margin-top: 20px; }
+
+.mi-cta { text-align: center; }
+.mi-cta button { font-weight: 400; }
