--- a/style.css
+++ b/style.css
@@ -120,6 +120,8 @@ a.skip-main:focus, a.skip-main:active { color: #000; background-color: #FFF; lef
   .stacktable.small-only { display: table; } }
 a:hover, .fl-builder a:hover { text-decoration: underline; }
 
+.d-inline-block { display: inline-block; }
+
 .mi-slogan { font-size: 13px; line-height: 1.5em; font-family: sans-serif; }
 @media (max-width: 767px) { .mi-slogan { text-align: center; } }
 
@@ -162,7 +164,7 @@ a:hover, .fl-builder a:hover { text-decoration: underline; }
 .mi-price-headline { background-color: #0e2c40; color: #fbfbfb; text-align: center; }
 
 .mi-price { text-align: center; }
-.mi-price strong { font-size: 2.5em; font-weight: 300; }
+.mi-price strong { font-size: 2.5em; font-weight: 300; line-height: 1em; }
 .mi-price p { margin-top: 20px; }
 
 .mi-cta { text-align: center; }
@@ -171,3 +173,5 @@ a:hover, .fl-builder a:hover { text-decoration: underline; }
 .mi-price-desc { min-height: 180px; }
 
 .wpcf7-checkbox .wpcf7-list-item { display: block; }
+
+.mi-products label { cursor: pointer; }
