style contact form output response

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -207,3 +207,9 @@ ul.mi-ticks, .mi-ticks ul {
     cursor: pointer;
   }
 }
+
+.wpcf7-mail-sent-ok {
+  border: 3px solid $color_gruen_logo;
+  background-color: $color_gruen_hell;
+}
+
