--- a/sass/_mi_variables.scss
+++ b/sass/_mi_variables.scss
@@ -1,7 +1,8 @@
 $color_grau_dunkel: #666666;
 $color_gruen_logo: #87a133;
+$color_gruen_hell: #e2eac4;
 $color_dunkelblau: #0e2c40;
 $color_text_white: #fbfbfb;
 
-$fam_copy:'Roboto', sans-serif;
+$fam_copy: 'Roboto', sans-serif;
 $fam_header: 'Slabo 27px', serif;
