style screen reader response

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -208,7 +208,7 @@ ul.mi-ticks, .mi-ticks ul {
   }
 }
 
-.wpcf7-mail-sent-ok {
+.wpcf7-mail-sent-ok, .screen-reader-response {
   border: 3px solid $color_gruen_logo;
   background-color: $color_gruen_hell;
 }
