style validation messages

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -212,4 +212,8 @@ ul.mi-ticks, .mi-ticks ul {
   border: 3px solid $color_gruen_logo;
   background-color: $color_gruen_hell;
 }
+.wpcf7-validation-errors {
+  border: 3px solid $color_dunkelblau;
+  background-color: #b5cade;
+}
 
