--- a/style.css
+++ b/style.css
@@ -177,3 +177,5 @@ ul.mi-ticks > li, .mi-ticks ul > li { background-image: url("/wp-content/themes/
 .mi-products label { cursor: pointer; }
 
 .wpcf7-mail-sent-ok, .screen-reader-response { border: 3px solid #87a133; background-color: #e2eac4; }
+
+.wpcf7-validation-errors { border: 3px solid #0e2c40; background-color: #b5cade; }
