--- a/sass/style.scss
+++ b/sass/style.scss
@@ -31,7 +31,7 @@ a:hover, .fl-builder a:hover {
 
 
 .d-inline-block {
-  display:inline-block;
+  display: inline-block;
 }
 
 
@@ -121,7 +121,7 @@ a:hover, .fl-builder a:hover {
 }
 
 #main ul.mi-no-ml {
-  margin-left:5px;
+  margin-left: 5px;
 }
 
 ul.mi-ticks, .mi-ticks ul {
@@ -174,9 +174,9 @@ ul.mi-ticks, .mi-ticks ul {
   text-align: center;
 
   strong {
-    font-size:2.5em;
-    font-weight:300;
-    line-height:1em;
+    font-size: 2.5em;
+    font-weight: 300;
+    line-height: 1em;
   }
 
   p {
@@ -198,7 +198,7 @@ ul.mi-ticks, .mi-ticks ul {
 
 .wpcf7-checkbox {
   .wpcf7-list-item {
-    display:block;
+    display: block;
   }
 }
 
@@ -212,8 +212,64 @@ ul.mi-ticks, .mi-ticks ul {
   border: 3px solid $color_gruen_logo;
   background-color: $color_gruen_hell;
 }
+
 .wpcf7-validation-errors {
   border: 3px solid $color_dunkelblau;
   background-color: #b5cade;
 }
 
+.uabb-pricing-table-column-0 .uabb-pricing-table-price {
+  // border-right: 1px solid #c1c1c1;
+}
+
+.uabb-pricing-table-column-0 {
+  border:1px solid #c1c1c1;
+}
+
+.uabb-pricing-table-column-1, .uabb-pricing-table-column-2, .uabb-pricing-table-column-3 {
+  border-right:1px solid #c1c1c1;
+  border-top:1px solid #c1c1c1;
+  border-bottom:1px solid #c1c1c1;
+}
+
+.uabb-pricing-table-column-0 {
+  ul.uabb-pricing-table-features {
+   //  border-left:1px solid #c1c1c1;
+  }
+  .uabb-pricing-table-price, .uabb-pricing-table-title {
+    background-color: #FFF;
+  }
+}
+
+.uabb-pricing-table .uabb-pricing-table-features li:first-child {
+  margin-top: 0 !important;
+}
+
+.uabb-pricing-table .uabb-pricing-table-features li {
+  padding: 6px 30px;
+}
+
+
+.yes {
+  font-size: 0;
+
+  &::after {
+    content: " ";
+    height: 16px;
+    width: 16px;
+    overflow: hidden;
+    display: inline-block;
+    background-image: url("/wp-content/themes/mainetcare-theme/assets/mi-tick.svg");
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
+  }
+}
+
+.uabb-pricing-table-column-1 .uabb-pricing-table-features li {
+  @include bp(mobile) {
+    @include nth-children(1,3,5,9,10,11,12,13) {
+      background-color: red !important;
+    }
+  }
+};
